test/files/neg/t12594/child_2.scala
// scalac: -Werror -Wunused

class Child extends Parent_1 {
  def takeMany(values: String*): Unit = println()   // error in RefChecks without linting
}
